--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="shortcut icon" type="image/png" href="/icon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Weave Assessment | by Edwin Neef</title>
+  <title>Energy Calculator | by Edwin Neef</title>
 </head>
 
 <body>
